  . Don't set $_SERVER['HTTPS'] on unsecure connection (bug #55403). (Uwe
    Schindler)

- SimpleXML:
  . Reverted the SimpleXML->query() behaviour to returning empty arrays
    instead of false when no nodes are found as it was since 5.3.3 
    (bug #48601). (chregu, rrichards)

- Sockets:
  . Fixed bug #60048 (sa_len a #define on IRIX). (china at thewrittenword dot
    com)

- SPL:
  . Fixed bug #55807 (Wrong value for splFileObject::SKIP_EMPTY).
    (jgotti at modedemploi dot fr, Hannes)
  . Fixed bug #54304 (RegexIterator::accept() doesn't work with scalar values).
    (Hannes)
    
- XSL:
  . Added xsl.security_prefs ini option to define forbidden operations within
    XSLT stylesheets, default is not to enable write operations. This option 
    won't be in 5.4, since there's a new method. Fixes Bug #54446. (Chregu,
    Nicolas Gregoire)

- Fileinfo:
  . Fixed bug #60094 (C++ comment fails in c89). (Laruence)

- FTP:
  . Fixed bug #60183 (out of sync ftp responses). (bram at ebskamp dot me,
    rasmus)

- SAPI:
  . Fixed bug #60205 (possible integer overflow in content_length). (Laruence)


23 Aug 2011, PHP 5.3.8

- Core:
  . Fixed bug #55439 (crypt() returns only the salt for MD5). (Stas)

- OpenSSL:
  . Reverted a change in timeout handling restoring PHP 5.3.6 behavior,
    as the new behavior caused mysqlnd SSL connections to hang (#55283).
    (Pierre, Andrey, Johannes)

18 Aug 2011, PHP 5.3.7
- Upgraded bundled SQLite to version 3.7.7.1. (Scott)
- Upgraded bundled PCRE to version 8.12. (Scott)

- Zend Engine:
  . Fixed bug #55156 (ReflectionClass::getDocComment() returns comment even
    though the class has none). (Felipe)
  . Fixed bug #55007 (compiler fail after previous fail). (Felipe)
  . Fixed bug #54910 (Crash when calling call_user_func with unknown function
    name). (Dmitry)
  . Fixed bug #54804 (__halt_compiler and imported namespaces).
    (Pierrick, Felipe)
  . Fixed bug #54624 (class_alias and type hint). (Felipe)